--- a/test-output/index.html
+++ b/test-output/index.html
@@ -109,12 +109,12 @@
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Open_Cart_Test_Regression_PW_Suite" title="com.qa.opencart.tests.HomePageTest" class="method navigator-link" hash-for-method="doSearchTest(samsung)">doSearchTest(samsung)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Open_Cart_Test_Regression_PW_Suite" title="com.qa.opencart.tests.HomePageTest" class="method navigator-link" hash-for-method="doSearchTest(macbook)">doSearchTest(macbook)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Open_Cart_Test_Regression_PW_Suite" title="com.qa.opencart.tests.HomePageTest" class="method navigator-link" hash-for-method="doSearchTest(macbook)">doSearchTest(macbook)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Open_Cart_Test_Regression_PW_Suite" title="com.qa.opencart.tests.HomePageTest" class="method navigator-link" hash-for-method="doSearchTest(samsung)">doSearchTest(samsung)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -191,18 +191,18 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="doSearchTest(samsung)">
-                  </a> <!-- doSearchTest(samsung) -->
-                  <span class="method-name">doSearchTest</span>
-                  <span class="parameters">(samsung)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
                   <a name="doSearchTest(macbook)">
                   </a> <!-- doSearchTest(macbook) -->
                   <span class="method-name">doSearchTest</span>
                   <span class="parameters">(macbook)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="doSearchTest(samsung)">
+                  </a> <!-- doSearchTest(samsung) -->
+                  <span class="method-name">doSearchTest</span>
+                  <span class="parameters">(samsung)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
@@ -249,7 +249,7 @@
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Open Cart Home Page Test_chrome --&gt;
   &lt;test thread-count=&quot;5&quot; parallel=&quot;tests&quot; name=&quot;Open Cart LogIn Page Test_chrome&quot; verbose=&quot;4&quot;&gt;
-    &lt;parameter name=&quot;browser&quot; value=&quot;chrome&quot;/&gt;
+    &lt;parameter name=&quot;browser&quot; value=&quot;chromium&quot;/&gt;
     &lt;classes&gt;
       &lt;class name=&quot;com.qa.opencart.tests.LogInPageTest&quot;/&gt;
     &lt;/classes&gt;
@@ -296,42 +296,42 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(8);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'appLoginTest')
+data.setCell(0, 1, 'forgotPwdLinkExistTest')
 data.setCell(0, 2, 'com.qa.opencart.tests.LogInPageTest')
-data.setCell(0, 3, 6135);
+data.setCell(0, 3, 5024);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'doSearchTest')
-data.setCell(1, 2, 'com.qa.opencart.tests.HomePageTest')
-data.setCell(1, 3, 6074);
+data.setCell(1, 1, 'appLoginTest')
+data.setCell(1, 2, 'com.qa.opencart.tests.LogInPageTest')
+data.setCell(1, 3, 4367);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'doSearchTest')
 data.setCell(2, 2, 'com.qa.opencart.tests.HomePageTest')
-data.setCell(2, 3, 5679);
+data.setCell(2, 3, 3832);
 data.setCell(3, 0, 3)
 data.setCell(3, 1, 'doSearchTest')
 data.setCell(3, 2, 'com.qa.opencart.tests.HomePageTest')
-data.setCell(3, 3, 5619);
+data.setCell(3, 3, 3436);
 data.setCell(4, 0, 4)
-data.setCell(4, 1, 'forgotPwdLinkExistTest')
-data.setCell(4, 2, 'com.qa.opencart.tests.LogInPageTest')
-data.setCell(4, 3, 5036);
+data.setCell(4, 1, 'doSearchTest')
+data.setCell(4, 2, 'com.qa.opencart.tests.HomePageTest')
+data.setCell(4, 3, 3403);
 data.setCell(5, 0, 5)
 data.setCell(5, 1, 'logInPageNavigationTest')
 data.setCell(5, 2, 'com.qa.opencart.tests.LogInPageTest')
-data.setCell(5, 3, 862);
+data.setCell(5, 3, 939);
 data.setCell(6, 0, 6)
 data.setCell(6, 1, 'getHomePageTitleTest')
 data.setCell(6, 2, 'com.qa.opencart.tests.HomePageTest')
-data.setCell(6, 3, 14);
+data.setCell(6, 3, 12);
 data.setCell(7, 0, 7)
 data.setCell(7, 1, 'getHomePageURLTest')
 data.setCell(7, 2, 'com.qa.opencart.tests.HomePageTest')
-data.setCell(7, 3, 3);
+data.setCell(7, 3, 1);
 window.suiteTableData['Open_Cart_Test_Regression_PW_Suite']= { tableData: data, tableDiv: 'times-div-Open_Cart_Test_Regression_PW_Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 35 seconds</span>
+              <span class="suite-total-time">Total running time: 24 seconds</span>
               <div id="times-div-Open_Cart_Test_Regression_PW_Suite">
               </div> <!-- times-div-Open_Cart_Test_Regression_PW_Suite -->
             </div> <!-- times-div -->
@@ -371,58 +371,64 @@ return data;
               </div> <!-- configuration-test before -->
               <div class="test-method">
                 <span class="method-name">logInPageNavigationTest</span>
-                <span class="method-start">17492 ms</span>
+                <span class="method-start">12375 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.qa.opencart.tests.HomePageTest</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">getHomePageTitleTest</span>
-                <span class="method-start">17796 ms</span>
+                <span class="method-start">12665 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">getHomePageURLTest</span>
-                <span class="method-start">17833 ms</span>
+                <span class="method-start">12692 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">doSearchTest(macbook)</span>
-                <span class="method-start">17841 ms</span>
+                <span class="method-start">12699 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.qa.opencart.tests.LogInPageTest</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">forgotPwdLinkExistTest</span>
-                <span class="method-start">18355 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">appLoginTest</span>
-                <span class="method-start">23394 ms</span>
+                <span class="method-start">13316 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.qa.opencart.tests.HomePageTest</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">doSearchTest(iphone)</span>
-                <span class="method-start">23917 ms</span>
+                <span class="method-start">16533 ms</span>
+              </div> <!-- test-method -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">com.qa.opencart.tests.LogInPageTest</div> <!-- chronological-class-name -->
+              <div class="test-method">
+                <span class="method-name">appLoginTest</span>
+                <span class="method-start">18371 ms</span>
+              </div> <!-- test-method -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">com.qa.opencart.tests.HomePageTest</div> <!-- chronological-class-name -->
+              <div class="test-method">
+                <span class="method-name">doSearchTest(samsung)</span>
+                <span class="method-start">19971 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.qa.opencart.tests.LogInPageTest</div> <!-- chronological-class-name -->
               <div class="configuration-test after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">29533 ms</span>
+                <span class="method-start">22740 ms</span>
               </div> <!-- configuration-test after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.qa.opencart.tests.HomePageTest</div> <!-- chronological-class-name -->
-              <div class="test-method">
-                <span class="method-name">doSearchTest(samsung)</span>
-                <span class="method-start">29547 ms</span>
-              </div> <!-- test-method -->
               <div class="configuration-test after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">35241 ms</span>
+                <span class="method-start">23375 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
