--- a/test-output/index.html
+++ b/test-output/index.html
@@ -56,7 +56,7 @@
                 </li>
                 <li>
                   <a href="#" panel-name="testlist-Open_Cart_Test_Regression_PW_Suite" class="navigator-link ">
-                    <span class="test-stats">2 tests</span>
+                    <span class="test-stats">1 test</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">8 methods,   8 passed</span>
+                    <span class="method-stats">3 methods,   3 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -109,32 +109,7 @@
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Open_Cart_Test_Regression_PW_Suite" title="com.qa.opencart.tests.HomePageTest" class="method navigator-link" hash-for-method="doSearchTest(macbook)">doSearchTest(macbook)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Open_Cart_Test_Regression_PW_Suite" title="com.qa.opencart.tests.HomePageTest" class="method navigator-link" hash-for-method="doSearchTest(samsung)">doSearchTest(samsung)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Open_Cart_Test_Regression_PW_Suite" title="com.qa.opencart.tests.HomePageTest" class="method navigator-link" hash-for-method="doSearchTest(iphone)">doSearchTest(iphone)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-Open_Cart_Test_Regression_PW_Suite" title="com.qa.opencart.tests.LogInPageTest" class="method navigator-link" hash-for-method="forgotPwdLinkExistTest">forgotPwdLinkExistTest</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Open_Cart_Test_Regression_PW_Suite" title="com.qa.opencart.tests.HomePageTest" class="method navigator-link" hash-for-method="getHomePageTitleTest">getHomePageTitleTest</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Open_Cart_Test_Regression_PW_Suite" title="com.qa.opencart.tests.HomePageTest" class="method navigator-link" hash-for-method="getHomePageURLTest">getHomePageURLTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -183,52 +158,6 @@
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
           </div> <!-- suite-Open_Cart_Test_Regression_PW_Suite-class-passed -->
-          <div class="suite-Open_Cart_Test_Regression_PW_Suite-class-passed">
-            <div class="main-panel-header rounded-window-top">
-              <img src="passed.png"/>
-              <span class="class-name">com.qa.opencart.tests.HomePageTest</span>
-            </div> <!-- main-panel-header rounded-window-top -->
-            <div class="main-panel-content rounded-window-bottom">
-              <div class="method">
-                <div class="method-content">
-                  <a name="doSearchTest(macbook)">
-                  </a> <!-- doSearchTest(macbook) -->
-                  <span class="method-name">doSearchTest</span>
-                  <span class="parameters">(macbook)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="doSearchTest(samsung)">
-                  </a> <!-- doSearchTest(samsung) -->
-                  <span class="method-name">doSearchTest</span>
-                  <span class="parameters">(samsung)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="doSearchTest(iphone)">
-                  </a> <!-- doSearchTest(iphone) -->
-                  <span class="method-name">doSearchTest</span>
-                  <span class="parameters">(iphone)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="getHomePageTitleTest">
-                  </a> <!-- getHomePageTitleTest -->
-                  <span class="method-name">getHomePageTitleTest</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="getHomePageURLTest">
-                  </a> <!-- getHomePageURLTest -->
-                  <span class="method-name">getHomePageURLTest</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-            </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Open_Cart_Test_Regression_PW_Suite-class-passed -->
         </div> <!-- panel Open_Cart_Test_Regression_PW_Suite -->
         <div panel-name="test-xml-Open_Cart_Test_Regression_PW_Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
@@ -242,12 +171,6 @@
   &lt;listeners&gt;
     &lt;listener class-name=&quot;com.qa.opencart.listeners.ExtentReportListener&quot;/&gt;
   &lt;/listeners&gt;
-  &lt;test thread-count=&quot;5&quot; parallel=&quot;tests&quot; name=&quot;Open Cart Home Page Test_chrome&quot; verbose=&quot;4&quot;&gt;
-    &lt;parameter name=&quot;browser&quot; value=&quot;chrome&quot;/&gt;
-    &lt;classes&gt;
-      &lt;class name=&quot;com.qa.opencart.tests.HomePageTest&quot;/&gt;
-    &lt;/classes&gt;
-  &lt;/test&gt; &lt;!-- Open Cart Home Page Test_chrome --&gt;
   &lt;test thread-count=&quot;5&quot; parallel=&quot;tests&quot; name=&quot;Open Cart LogIn Page Test_chrome&quot; verbose=&quot;4&quot;&gt;
     &lt;parameter name=&quot;browser&quot; value=&quot;chromium&quot;/&gt;
     &lt;classes&gt;
@@ -264,9 +187,6 @@
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <ul>
-              <li>
-                <span class="test-name">Open Cart Home Page Test_chrome (1 class)</span>
-              </li>
               <li>
                 <span class="test-name">Open Cart LogIn Page Test_chrome (1 class)</span>
               </li>
@@ -294,44 +214,24 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(8);
+data.addRows(3);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'forgotPwdLinkExistTest')
 data.setCell(0, 2, 'com.qa.opencart.tests.LogInPageTest')
-data.setCell(0, 3, 5024);
+data.setCell(0, 3, 5027);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'appLoginTest')
 data.setCell(1, 2, 'com.qa.opencart.tests.LogInPageTest')
-data.setCell(1, 3, 4367);
+data.setCell(1, 3, 3603);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'doSearchTest')
-data.setCell(2, 2, 'com.qa.opencart.tests.HomePageTest')
-data.setCell(2, 3, 3832);
-data.setCell(3, 0, 3)
-data.setCell(3, 1, 'doSearchTest')
-data.setCell(3, 2, 'com.qa.opencart.tests.HomePageTest')
-data.setCell(3, 3, 3436);
-data.setCell(4, 0, 4)
-data.setCell(4, 1, 'doSearchTest')
-data.setCell(4, 2, 'com.qa.opencart.tests.HomePageTest')
-data.setCell(4, 3, 3403);
-data.setCell(5, 0, 5)
-data.setCell(5, 1, 'logInPageNavigationTest')
-data.setCell(5, 2, 'com.qa.opencart.tests.LogInPageTest')
-data.setCell(5, 3, 939);
-data.setCell(6, 0, 6)
-data.setCell(6, 1, 'getHomePageTitleTest')
-data.setCell(6, 2, 'com.qa.opencart.tests.HomePageTest')
-data.setCell(6, 3, 12);
-data.setCell(7, 0, 7)
-data.setCell(7, 1, 'getHomePageURLTest')
-data.setCell(7, 2, 'com.qa.opencart.tests.HomePageTest')
-data.setCell(7, 3, 1);
+data.setCell(2, 1, 'logInPageNavigationTest')
+data.setCell(2, 2, 'com.qa.opencart.tests.LogInPageTest')
+data.setCell(2, 3, 706);
 window.suiteTableData['Open_Cart_Test_Regression_PW_Suite']= { tableData: data, tableDiv: 'times-div-Open_Cart_Test_Regression_PW_Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 24 seconds</span>
+              <span class="suite-total-time">Total running time: 22 seconds</span>
               <div id="times-div-Open_Cart_Test_Regression_PW_Suite">
               </div> <!-- times-div-Open_Cart_Test_Regression_PW_Suite -->
             </div> <!-- times-div -->
@@ -357,13 +257,6 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.qa.opencart.tests.HomePageTest</div> <!-- chronological-class-name -->
-              <div class="configuration-test before">
-                <span class="method-name">setUp</span>
-                <span class="method-start">0 ms</span>
-              </div> <!-- configuration-test before -->
-            </div> <!-- chronological-class -->
-            <div class="chronological-class">
               <div class="chronological-class-name">com.qa.opencart.tests.LogInPageTest</div> <!-- chronological-class-name -->
               <div class="configuration-test before">
                 <span class="method-name">setUp</span>
@@ -371,64 +264,19 @@ return data;
               </div> <!-- configuration-test before -->
               <div class="test-method">
                 <span class="method-name">logInPageNavigationTest</span>
-                <span class="method-start">12375 ms</span>
+                <span class="method-start">12741 ms</span>
               </div> <!-- test-method -->
-            </div> <!-- chronological-class -->
-            <div class="chronological-class">
-              <div class="chronological-class-name">com.qa.opencart.tests.HomePageTest</div> <!-- chronological-class-name -->
-              <div class="test-method">
-                <span class="method-name">getHomePageTitleTest</span>
-                <span class="method-start">12665 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">getHomePageURLTest</span>
-                <span class="method-start">12692 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">doSearchTest(macbook)</span>
-                <span class="method-start">12699 ms</span>
-              </div> <!-- test-method -->
-            </div> <!-- chronological-class -->
-            <div class="chronological-class">
-              <div class="chronological-class-name">com.qa.opencart.tests.LogInPageTest</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">forgotPwdLinkExistTest</span>
-                <span class="method-start">13316 ms</span>
+                <span class="method-start">13455 ms</span>
               </div> <!-- test-method -->
-            </div> <!-- chronological-class -->
-            <div class="chronological-class">
-              <div class="chronological-class-name">com.qa.opencart.tests.HomePageTest</div> <!-- chronological-class-name -->
-              <div class="test-method">
-                <span class="method-name">doSearchTest(iphone)</span>
-                <span class="method-start">16533 ms</span>
-              </div> <!-- test-method -->
-            </div> <!-- chronological-class -->
-            <div class="chronological-class">
-              <div class="chronological-class-name">com.qa.opencart.tests.LogInPageTest</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">appLoginTest</span>
-                <span class="method-start">18371 ms</span>
+                <span class="method-start">18487 ms</span>
               </div> <!-- test-method -->
-            </div> <!-- chronological-class -->
-            <div class="chronological-class">
-              <div class="chronological-class-name">com.qa.opencart.tests.HomePageTest</div> <!-- chronological-class-name -->
-              <div class="test-method">
-                <span class="method-name">doSearchTest(samsung)</span>
-                <span class="method-start">19971 ms</span>
-              </div> <!-- test-method -->
-            </div> <!-- chronological-class -->
-            <div class="chronological-class">
-              <div class="chronological-class-name">com.qa.opencart.tests.LogInPageTest</div> <!-- chronological-class-name -->
               <div class="configuration-test after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">22740 ms</span>
-              </div> <!-- configuration-test after -->
-            </div> <!-- chronological-class -->
-            <div class="chronological-class">
-              <div class="chronological-class-name">com.qa.opencart.tests.HomePageTest</div> <!-- chronological-class-name -->
-              <div class="configuration-test after">
-                <span class="method-name">tearDown</span>
-                <span class="method-start">23375 ms</span>
+                <span class="method-start">22093 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
