--- a/test-output/old/Open Cart Test Regression PW Suite/methods.html
+++ b/test-output/old/Open Cart Test Regression PW Suite/methods.html
@@ -1,28 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Open Cart Test Regression PW Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="bc86a5">  <td>24/09/05 06:00:02</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.doSearchTest(java.lang.String)[pri:3, instance:com.qa.opencart.tests.HomePageTest@341814d3]">doSearchTest</td> 
-  <td>TestNG-tests-1@1375592102</td>   <td></td> </tr>
-<tr bgcolor="f3a5d8">  <td>24/09/05 05:59:42</td>   <td>-19969</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp()[pri:0, instance:com.qa.opencart.tests.HomePageTest@341814d3]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@1375592102</td>   <td></td> </tr>
-<tr bgcolor="f3a5d8">  <td>24/09/05 06:00:06</td>   <td>3404</td> <td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.qa.opencart.tests.HomePageTest@341814d3]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@1375592102</td>   <td></td> </tr>
-<tr bgcolor="bc86a5">  <td>24/09/05 05:59:55</td>   <td>-7279</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.getHomePageURLTest()[pri:2, instance:com.qa.opencart.tests.HomePageTest@341814d3]">getHomePageURLTest</td> 
-  <td>TestNG-tests-1@1375592102</td>   <td></td> </tr>
-<tr bgcolor="bc86a5">  <td>24/09/05 06:00:02</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.doSearchTest(java.lang.String)[pri:3, instance:com.qa.opencart.tests.HomePageTest@341814d3]">doSearchTest</td> 
-  <td>TestNG-tests-1@1375592102</td>   <td></td> </tr>
-<tr bgcolor="bc86a5">  <td>24/09/05 06:00:02</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.doSearchTest(java.lang.String)[pri:3, instance:com.qa.opencart.tests.HomePageTest@341814d3]">doSearchTest</td> 
-  <td>TestNG-tests-1@1375592102</td>   <td></td> </tr>
-<tr bgcolor="bc86a5">  <td>24/09/05 05:59:55</td>   <td>-7306</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.getHomePageTitleTest()[pri:1, instance:com.qa.opencart.tests.HomePageTest@341814d3]">getHomePageTitleTest</td> 
-  <td>TestNG-tests-1@1375592102</td>   <td></td> </tr>
-<tr bgcolor="fea39d">  <td>24/09/05 05:59:56</td>   <td>-6655</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LogInPageTest.forgotPwdLinkExistTest()[pri:2, instance:com.qa.opencart.tests.LogInPageTest@7e5c856f]">forgotPwdLinkExistTest</td> 
-  <td>TestNG-tests-2@1703102606</td>   <td></td> </tr>
-<tr bgcolor="fea39d">  <td>24/09/05 05:59:55</td>   <td>-7596</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LogInPageTest.logInPageNavigationTest()[pri:1, instance:com.qa.opencart.tests.LogInPageTest@7e5c856f]">logInPageNavigationTest</td> 
-  <td>TestNG-tests-2@1703102606</td>   <td></td> </tr>
-<tr bgcolor="f3a5d8">  <td>24/09/05 05:59:42</td>   <td>-19969</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp()[pri:0, instance:com.qa.opencart.tests.LogInPageTest@7e5c856f]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@1703102606</td>   <td></td> </tr>
-<tr bgcolor="fea39d">  <td>24/09/05 06:00:01</td>   <td>-1600</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LogInPageTest.appLoginTest()[pri:3, instance:com.qa.opencart.tests.LogInPageTest@7e5c856f]">appLoginTest</td> 
-  <td>TestNG-tests-2@1703102606</td>   <td></td> </tr>
-<tr bgcolor="f3a5d8">  <td>24/09/05 06:00:05</td>   <td>2769</td> <td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.qa.opencart.tests.LogInPageTest@7e5c856f]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@1703102606</td>   <td></td> </tr>
+<tr bgcolor="f3a5d8">  <td>24/09/05 06:09:31</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp()[pri:0, instance:com.qa.opencart.tests.LogInPageTest@4e423aa2]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@1521473039</td>   <td></td> </tr>
+<tr bgcolor="f3a5d8">  <td>24/09/05 06:09:53</td>   <td>22090</td> <td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.qa.opencart.tests.LogInPageTest@4e423aa2]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@1521473039</td>   <td></td> </tr>
+<tr bgcolor="bc86a5">  <td>24/09/05 06:09:44</td>   <td>12738</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LogInPageTest.logInPageNavigationTest()[pri:1, instance:com.qa.opencart.tests.LogInPageTest@4e423aa2]">logInPageNavigationTest</td> 
+  <td>TestNG-tests-1@1521473039</td>   <td></td> </tr>
+<tr bgcolor="bc86a5">  <td>24/09/05 06:09:44</td>   <td>13452</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LogInPageTest.forgotPwdLinkExistTest()[pri:2, instance:com.qa.opencart.tests.LogInPageTest@4e423aa2]">forgotPwdLinkExistTest</td> 
+  <td>TestNG-tests-1@1521473039</td>   <td></td> </tr>
+<tr bgcolor="bc86a5">  <td>24/09/05 06:09:49</td>   <td>18484</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LogInPageTest.appLoginTest()[pri:3, instance:com.qa.opencart.tests.LogInPageTest@4e423aa2]">appLoginTest</td> 
+  <td>TestNG-tests-1@1521473039</td>   <td></td> </tr>
 </table>
